# karma_calculator

./: Cargo.toml  README.md  Rocket.toml
src/: circuit.rs  client.rs  client_server.rs  dashboard.rs  karma_rs_fhe_lib.rs  lib.rs  main.rs  server.rs  tests.rs  types.rs
src/compiled/: mod.rs
src_c/: BUILD  karma.cc  karma.h  karma_rs_lib.rs
src_c/karma_add/: karma_add.cc  karma_add.h  karma_add_rs_lib.rs
src_c/karma_sub/: karma_sub.cc  karma_sub.h  karma_sub_rs_lib.rs
