[package]
name = "karma_calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
phantom-zone = { path = "../phantom-zone", features = ["non_interactive_mp"] }
rand = "*"
itertools = "0.12.0"
rocket = { version = "0.5.1", features = ["json", "msgpack"] }
hex = "0.4.3"
serde_json = { version = "1.0.120" }
bincode = {version = "1.3.3"}